examples/test/testpolicy5325.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5325
  namespace: namespace497
spec:
  podSelector:
    matchLabels:
      key4: value1
      key26: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value31
          key2: value28
      podSelector:
        matchLabels:
          key3: value9
